--- a/src/toolbox.css
+++ b/src/toolbox.css
@@ -1,1 +1,17 @@
-/* place holder */
+.gridControlContainerWarning {
+    color: red;
+    margin: 1em;
+}
+
+#id_toolbox_button_table {
+    width: 96%;
+}
+
+#id_toolbox_button_table td {
+    padding: 4px;
+}
+
+#id_toolbox_button_table .button {
+    width: 100%;
+    height: 100%;
+}
